src/test/ui/borrowck/borrowck-mut-slice-of-imm-vec.stderr
error[E0596]: cannot borrow `v` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-mut-slice-of-imm-vec.rs:7:11
   |
LL |     let v = vec![1, 2, 3];
   |         - help: consider changing this to be mutable: `mut v`
LL |     write(&mut v);
   |           ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
